[gd_scene load_steps=3 format=3 uid="uid://c1gx8xj4qr5p8"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_8fx7x"]
[ext_resource type="Texture2D" uid="uid://bnujxu3y1ey1i" path="res://assets/images/other/OpenBattlefields_title.png" id="2_title"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_8fx7x")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="TitleImage" type="TextureRect" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(1600, 600)
texture = ExtResource("2_title")
expand_mode = 1
stretch_mode = 5

[node name="Spacer" type="Control" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="PlayerNameContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="PlayerNameLabel" type="Label" parent="VBoxContainer/PlayerNameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Player Name:"
horizontal_alignment = 1

[node name="PlayerNameInput" type="LineEdit" parent="VBoxContainer/PlayerNameContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(300, 0)
theme_override_font_sizes/font_size = 16
placeholder_text = "Enter your name"
alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="MenuButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CreateLobbyButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(250, 50)
theme_override_font_sizes/font_size = 20
text = "Host Game"

[node name="JoinLobbyButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(250, 50)
theme_override_font_sizes/font_size = 20
text = "Join Game"

[node name="PracticeButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(250, 50)
theme_override_font_sizes/font_size = 20
text = "Practice Mode"

[node name="QuitButton" type="Button" parent="VBoxContainer/MenuButtons"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(250, 50)
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "v0.1.0"
horizontal_alignment = 2

[connection signal="pressed" from="VBoxContainer/MenuButtons/CreateLobbyButton" to="." method="_on_create_lobby_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/JoinLobbyButton" to="." method="_on_join_lobby_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/PracticeButton" to="." method="_on_practice_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]